<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green"
    tools:context=".view.activities.auth.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_petDiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_logo_cd"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/register_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/regisSec_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/sign_up_desc"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:helperText="@string/help_name_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:helperText="@string/help_email_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            app:helperText="@string/help_password_helper_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword_TIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="password_toggle"
            app:helperText="@string/help_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/signIn_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/orange_main"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_grey"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>